# getxm

./: .gitignore  README.md  architecture.d2  chatbot_service.py  data.md  data.txt  data_service.py  pinecone_utils.py  pyproject.toml  serverless.yml
src/handlers/: lambda_handler.py
src/services/: chatbot_service.py  data_service.py
src/ui/: ui.py
src/utils/: pinecone_utils.py
