[project]
name = "getxm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "bs4>=0.0.2",
    "faiss-cpu>=1.9.0.post1",
    "fastapi>=0.115.6",
    "gpt4all>=2.8.2",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
    "uvicorn>=0.34.0",
]

[tool.poetry]
name = "getxm"
version = "0.1.0"
description = ""
authors = ["Asad <essayyzed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.13"
langchain-community = "^0.3.13"
gpt4all = "^2.8.2"
faiss-cpu = "^1.9.0.post1"
requests = "^2.32.3"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
streamlit = "^1.41.1"
python-dotenv = "^1.0.1"
numpy = "^2.2.1"
pandas = "^2.2.3"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.3"
python-multipart = "^0.0.20"
langchain-ollama = "^0.2.2"
langchain-openai = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
