[project]
name = "getxm"
version = "0.1.0"
description = "Document Question Answering System with LangChain and Pinecone"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [
    { name = "Asad", email = "essayyzed@gmail.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "bs4>=0.0.2",
    "faiss-cpu>=1.9.0.post1",
    "fastapi>=0.115.6",
    "gpt4all>=2.8.2",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "numpy>=1.22.4,<2.0.0",
    "pandas>=2.2.3",
    "pinecone-client>=5.0.0,<6.0.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.6.0",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
    "uvicorn>=0.34.0",
    "mangum>=0.17.0"
]

[tool.poetry]
name = "getxm"
version = "0.1.0"
description = "Document Question Answering System with LangChain and Pinecone"
authors = ["Asad <essayyzed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
# Core LangChain packages
langchain = "^0.3.13"
langchain-community = "^0.3.13"
langchain-openai = "^0.2.14"
langchain-ollama = "^0.2.2"

# Vector stores and embeddings
pinecone-client = ">=5.0.0,<6.0.0"
faiss-cpu = "^1.9.0.post1"

# Web framework and server
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"

# Data processing and utilities
numpy = ">=1.22.4,<2.0.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
pydantic = "^2.6.0"

# Optional UI components
streamlit = "^1.41.1"

# Development dependencies
langchain-pinecone = "^0.2.0"
nltk = "^3.9.1"
[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Additional configurations
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
